Media Queries and footer adjusted

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <footer>
         <div class="footer-flex">
             <div class="brand">
-                <h2>phtfndr</h2>
+                <img src="assets/logo/logo.svg" alt="pthfndr" class="footer-logo">
             </div>
             <div class="footer-nav">
                 <h2>Navegação</h2>
