--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Pathfinder Designs</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/animations.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://kit.fontawesome.com/a6255f3766.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -17,11 +19,11 @@
         <img src="assets/logo/logo.svg" alt="Pathfinder" class="logo">
 
         <ul class="nav-links">
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Social</a></li>
-            <li><a href="">Contactos</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Social</a></li>
+            <li><a href="#">Contactos</a></li>
         </ul>
 
         <div class="menu-toggle">
@@ -30,31 +32,37 @@
     </nav>
 
     <div class="hero-landing">
-        <h1 data-scroll>Pathfinder Designs</h1>
-        <p data-scroll>Design made for <u>everyone</u>.</p>
+        <h1>Pathfinder Designs</h1>
+        <p>Find Your Path</p>
     </div>
 
-    <section class="custom-section cream-section" id="about">
-        <h1>Encontra o teu caminho.</h1>
+    <section class="custom-section cream-section" id="about" data-scroll>
+        <h1>Encontre o seu caminho.</h1>
+        <p>A sua marca, grande ou pequena, tem um superpoder. Tudo o que ela faz tem o potencial de criar boas experiências e sensações na mente dos seus clientes. Como um pequeno grão de areia numa ostra, cada ação positiva pode ser um passo dado até se tornar uma linda perola. As pequenas coisas têm o poder de se tornar gigantes. No entanto, para elevar a sua marca a esse estatuto, todas as pequenas ações têm de estar cobertas com uma boa identidade. A mesma aparência, a mesma tonalidade e o mesmo tom de voz. Uma boa identidade, tem o poder de tornar a sua marca, algo especial aos olhos da sua audiência. Vamos criá-la juntos?</p>
+    </section>
+
+    <section class="custom-section" data-scroll>
+        <h1>Criamos experiências.</h1>
         <p>Acreditamos que ter uma identidade forte e reconhecível é a chave para um negócio com sucesso. Assim, ajudamos pessoas e empresas a tomar decisões corretas, um passo de cada vez.</p>
     </section>
 
-    <section class="custom-section">
-        <h1>Criamos experiências.</h1>
-        <p></p>
-    </section>
-
-    <section class="custom-section cream-section">
+    <section class="custom-section cream-section" data-scroll>
         <h1>O nosso trabalho.</h1>
-        <p>Todo o nosso trabalho é feito com toda a dedicação e profissionalismo. Não deixamos nada ao acaso. Venha descobrir um pouco do que podemos fazer para si!</p>
+        <p>Todo o nosso trabalho é feito com a máxima dedicação e profissionalismo. Não deixamos nada ao acaso. Venha descobrir um pouco do que podemos fazer para si!</p>
     </section>
 
-    <section class="custom-section">
+    <section class="custom-section" data-scroll>
         <h1>Caminhar é com amigos.</h1>
         <p>Fique a par de todas as novidades ou entre em contacto connosco. Teremos todo o prazer em ajudar.</p>
+        <div class="social-flex">
+            <div class="social-icon"> <i class="fab fa-facebook"></i> </div>
+            <div class="social-icon"> <i class="fab fa-instagram"></i> </div>
+            <div class="social-icon"> <i class="fab fa-youtube"></i> </div>
+            
+        </div>
     </section>
 
-    <section class="custom-section cream-section">
+    <section class="custom-section cream-section" data-scroll>
         <h1>Pronto para caminhar connosco?</h1>
         <p>Interessado? Envie-nos uma mensagem e iremos responder assim que possível!</p>
         <p class="warn">Os campos marcados com (*) são obrigatórios.</p>
@@ -94,5 +102,12 @@
     <script src="js/script.js"></script>
     <script src="js/hide-nav.js"></script>
     <script src="js/change-nav-on-section.js"></script>
+
+    <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
+    <script>
+      ScrollOut({
+        once: true
+      });
+    </script>
 </body>
 </html>
