Fixed Navbar bugs, added correct links

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <img src="assets/logo/logo.svg" alt="Pathfinder" class="logo">
 
         <ul class="nav-links">
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Serviços</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Social</a></li>
-            <li><a href="#">Contactos</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#services">Serviços</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#social">Social</a></li>
+            <li><a href="#contact">Contactos</a></li>
         </ul>
 
         <div class="menu-toggle">
@@ -41,28 +41,28 @@
         <p>A sua marca, grande ou pequena, tem um superpoder. Tudo o que ela faz tem o potencial de criar boas experiências e sensações na mente dos seus clientes. Como um pequeno grão de areia numa ostra, cada ação positiva pode ser um passo dado até se tornar uma linda perola. As pequenas coisas têm o poder de se tornar gigantes. No entanto, para elevar a sua marca a esse estatuto, todas as pequenas ações têm de estar cobertas com uma boa identidade. A mesma aparência, a mesma tonalidade e o mesmo tom de voz. Uma boa identidade, tem o poder de tornar a sua marca, algo especial aos olhos da sua audiência. Vamos criá-la juntos?</p>
     </section>
 
-    <section class="custom-section">
+    <section class="custom-section" id="services">
         <h1>Criamos experiências.</h1>
         <p>Acreditamos que ter uma identidade forte e reconhecível é a chave para um negócio com sucesso. Assim, ajudamos pessoas e empresas a tomar decisões corretas, um passo de cada vez.</p>
     </section>
 
-    <section class="custom-section cream-section">
+    <section class="custom-section cream-section" id="portfolio">
         <h1>O nosso trabalho.</h1>
         <p>Todo o nosso trabalho é feito com a máxima dedicação e profissionalismo. Não deixamos nada ao acaso. Venha descobrir um pouco do que podemos fazer para si!</p>
     </section>
 
-    <section class="custom-section">
+    <section class="custom-section" id="social">
         <h1>Caminhar é com amigos.</h1>
         <p>Fique a par de todas as novidades ou entre em contacto connosco. Teremos todo o prazer em ajudar.</p>
         <div class="social-flex">
-            <div class="social-icon"> <i class="fab fa-facebook"></i> </div>
-            <div class="social-icon"> <i class="fab fa-instagram"></i> </div>
-            <div class="social-icon"> <i class="fab fa-youtube"></i> </div>
+            <div class="social-icon"> <a href="https://www.facebook.com/pathfinderdesigns"><i class="fab fa-facebook"></i></a> </div>
+            <div class="social-icon"> <a href="https://www.instagram.com/pathfinderdesigns"><i class="fab fa-instagram"></i></a> </div>
+            <div class="social-icon"> <a href="#"><i class="fab fa-youtube"></i></a> </div>
             
         </div>
     </section>
 
-    <section class="custom-section cream-section">
+    <section class="custom-section cream-section" id="contact">
         <h1>Pronto para caminhar connosco?</h1>
         <p>Interessado? Envie-nos uma mensagem e iremos responder assim que possível!</p>
         <p class="warn">Os campos marcados com (*) são obrigatórios.</p>
@@ -77,19 +77,19 @@
                 <h2>Navegação</h2>
                 <div class="footer-nav-list">
                     <ul>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Serviços</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Social</a></li>
-                        <li><a href="#">Contactos</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#services">Serviços</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#social">Social</a></li>
+                        <li><a href="#contact">Contactos</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-social">
                 <h2>Redes Sociais</h2>
                 <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/pathfinderdesigns">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/pathfinderdesigns">Instagram</a></li>
                     <li><a href="#">Youtube</a></li>
                 </ul>
             </div>
