Color adjustments and smooth scroll

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Find Your Path</p>
     </div>
 
-    <section class="custom-section cream-section" id="about">
+    <section class="custom-section black-section" id="about">
         <h1>Encontre o seu caminho.</h1>
         <p>A sua marca, grande ou pequena, tem um superpoder. Tudo o que ela faz tem o potencial de criar boas experiências e sensações na mente dos seus clientes. Como um pequeno grão de areia numa ostra, cada ação positiva pode ser um passo dado até se tornar uma linda perola. As pequenas coisas têm o poder de se tornar gigantes. No entanto, para elevar a sua marca a esse estatuto, todas as pequenas ações têm de estar cobertas com uma boa identidade. A mesma aparência, a mesma tonalidade e o mesmo tom de voz. Uma boa identidade, tem o poder de tornar a sua marca, algo especial aos olhos da sua audiência. Vamos criá-la juntos?</p>
     </section>
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <section class="custom-section cream-section" id="contact">
+    <section class="custom-section blue-section" id="contact">
         <h1>Pronto para caminhar connosco?</h1>
         <p>Interessado? Envie-nos uma mensagem e iremos responder assim que possível!</p>
         <p class="warn">Os campos marcados com (*) são obrigatórios.</p>
