Work/Portfolio Section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/gallery.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://kit.fontawesome.com/a6255f3766.js" crossorigin="anonymous"></script>
@@ -49,7 +50,26 @@
     <section class="custom-section cream-section" id="portfolio">
         <h1>O nosso trabalho.</h1>
         <p>Todo o nosso trabalho é feito com a máxima dedicação e profissionalismo. Não deixamos nada ao acaso. Venha descobrir um pouco do que podemos fazer para si!</p>
+        <div class="gallery">
+            <div class="portfolio-work">
+                <img src="https://unsplash.it/400" alt="abc">
+                <p>Pathfinder Designs</p>
+            </div>
+
+        </div>
+
+        <div class="gallery-see-more">
+            <button class="see-more">
+                <a href="https://www.instagram.com/pathfinderdesigns">Veja mais!</a>
+            </button>
+        </div>
     </section>
+
+    <div class="section-body cream-section">
+        
+        
+
+    </div>
 
     <section class="custom-section" id="social">
         <h1>Caminhar é com amigos.</h1>
