--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>A sua marca, grande ou pequena, tem um superpoder. Tudo o que ela faz tem o potencial de criar boas experiências e sensações na mente dos seus clientes. Como um pequeno grão de areia numa ostra, cada ação positiva pode ser um passo dado até se tornar uma linda perola. No entanto, para a sua marca se tornar nessa perola, todas as pequenas ações têm de estar cobertas com uma boa identidade. A mesma aparência, a mesma tonalidade e o mesmo tom de voz. Uma boa identidade, tem o poder de tornar a sua marca, algo especial aos olhos da sua audiência. Vamos criá-la juntos?</p>
     </section>
 
-    <section class="custom-section" id="services">
+    <section class="custom-section section-details-white" id="services">
         <h1>Criamos experiências.</h1>
         <p>Acreditamos que ter uma identidade forte e reconhecível é a chave para um negócio com sucesso. Assim, ajudamos pessoas e empresas a tomar decisões corretas, um passo de cada vez.</p>
         
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section class="custom-section" id="social">
+    <section class="custom-section section-details-white" id="social">
         <h1>Caminhar é com amigos.</h1>
         <p>Fique a par de todas as novidades ou entre em contacto connosco. Teremos todo o prazer em ajudar.</p>
         <div class="social-flex">
