Portfolio section modified, reused cards from services. Backgroudn details modified

--- a/index.html
+++ b/index.html
@@ -74,22 +74,27 @@
 
     
 
-    <section class="custom-section cream-section" id="portfolio">
+    <section class="custom-section cream-section section-details-cream" id="portfolio">
         <h1>O nosso trabalho.</h1>
         <p>Todo o nosso trabalho é feito com a máxima dedicação e profissionalismo. Não deixamos nada ao acaso. Venha descobrir um pouco do que podemos fazer para si!</p>
-        <div class="gallery">
-            <div class="portfolio-work">
-                <img src="https://unsplash.it/400" alt="abc">
-                <p>Pathfinder Designs</p>
+        <br><p>Escolha um dos projetos abaixo para informações mais informações de como foi realizado, ou então veja mais no Instagram!</p>
+        <div class="services" id="about">
+            <div class="service-1">
+                <div class="img-portfolio">
+                    <img src="assets/logo/logo-circular.png" alt="pf-designs">
+                </div>
+                <div class="description">
+                    <h2>Pathfinder Designs</h2>
+                    <p>Identidade Visual do nosso projeto. Desde a criação do logotipo, website, rede sociais, etc. Venha descobrir mais!</p>
+                </div>
             </div>
-
         </div>
-
         <div class="gallery-see-more">
             <button class="see-more">
                 <a href="https://www.instagram.com/pathfinderdesigns">Veja mais!</a>
             </button>
         </div>
+       
     </section>
 
     <section class="custom-section section-details-white" id="social">
