Changes on form, images changed with reduced size

--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
             <form class="email-form anim-up" id="add-email-form">
                 <div class="form-group" id="add-email-form">
                     <label>Nome</label>
-                    <input id="email-name" type="text" name="name" class="name">
+                    <input id="email-name" type="text" name="name" class="form-input" required>
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input id="email-mail" type="text" name="mail" class="name">
+                    <input id="email-mail" type="text" name="mail" class="form-input" required>
                 </div>
                 <div class="form-group">
                     <label>Mensagem</label>
-                    <textarea id="email-message" type="text" name="message" class="message"></textarea>
+                    <textarea id="email-message" type="text" name="message" class="form-input" required></textarea>
                 </div>
                 <button id="new-email" class="anim-up">Enviar</button>
             </form>
