--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,13 +57,13 @@
             <a href="#brief"><img class="down-arrow" src="../assets/images/icons/down.svg"></a>
             <p class="hero-paragraph" id="startChange">pathfinderdesigns.</p>
             <h1 class="hero-heading">
-                <span class="hero-h1">página</span>
-                <span class="hero-h1">em</span>
-                <span class="hero-h1">construção.</span>
+                <span class="hero-h1">o</span>
+                <span class="hero-h1">nosso</span>
+                <span class="hero-h1">trabalho.</span>
             </h1>
         </section>
         <div class="intro-image-wrapper anim-up-wrapper">
-            <div class="brief-image anim-up">
+            <div class="portfolio-image anim-up">
             </div>
         </div>
     
@@ -81,15 +81,15 @@
             <form class="email-form anim-up" id="add-email-form">
                 <div class="form-group" id="add-email-form">
                     <label>Nome</label>
-                    <input id="email-name" type="text" name="name" class="name">
+                    <input id="email-name" type="text" name="name" class="form-input" required>
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input id="email-mail" type="text" name="mail" class="name">
+                    <input id="email-mail" type="text" name="mail" class="form-input" required>
                 </div>
                 <div class="form-group">
                     <label>Mensagem</label>
-                    <textarea id="email-message" type="text" name="message" class="message"></textarea>
+                    <textarea id="email-message" type="text" name="message" class="form-input" required></textarea>
                 </div>
                 <button id="new-email" class="anim-up">Enviar</button>
             </form>
